--- a/webgis.html
+++ b/webgis.html
@@ -86,6 +86,7 @@
   <script src="geojson/shelterEvakuasi.js"></script>
   <script src="geojson/titikBahaya.js"></script>
   <script src="geojson/jalurEvakuasi.js"></script>
+  <script src="geojson/pemukiman.js"></script>
 
   <script src="assets/js/webgis.js"></script>
 </html>
