--- a/webgis.html
+++ b/webgis.html
@@ -87,6 +87,10 @@
   <script src="geojson/titikBahaya.js"></script>
   <script src="geojson/jalurEvakuasi.js"></script>
   <script src="geojson/pemukiman.js"></script>
+  <script src="geojson/Inundasi/inundasi5m.js"></script>
+  <script src="geojson/Inundasi/inundasi10m.js"></script>
+  <script src="geojson/Inundasi/inundasi15m.js"></script>
+  <script src="geojson/Inundasi/inundasi20m.js"></script>
 
   <script src="assets/js/webgis.js"></script>
 </html>
